# demo-ai-semantic-kernel

./: KernelBuilderExtensions.cs  KernelSettings.cs  LICENSE  Program.cs  README.md  demo-ai-semantic-kernel.csproj  demo-ai-semantic-kernel.sln  output.md
Plugins/Native/: ParseDocuments.cs
Plugins/Prompts/ListOfFindings/: config.json
Plugins/Semantic/ListOfFindings/: config.json  skprompt.txt
sample/: sample.md
src/dotnet/rag-ai-search/: KernelSettings.cs  Program.cs
src/dotnet/sam-report-generator/: KernelSettings.cs  README.md
src/dotnet/wd-mainboardgpt/: .gitignore  wd-mainboardgpt.csproj  wd-mainboardgpt.sln
src/dotnet/wd-mainboardgpt/Auxiliaries/: DumpOutput.cs  TracePromptFilter.cs
src/python/kcd-munich-kaito/: README.md  kaito_semantic_kernel_demo.ipynb  openai_semantic_kernel_demo.ipynb
src/python/kcd-munich-kaito/k8s/: falcon-ingress.yaml  falcon.yaml  gpu-provisioner-values.yaml
src/python/ki-shiny/: Dockerfile  README.md  app.py  pyproject.toml  setup_and_run.ps1  setup_and_run.sh
src/python/ki-shiny/core/: converters.py  di_container.py  logging.py
src/python/ki-shiny/models/: my_model.py
src/python/ki-shiny/modules/: agent.py  my_module.py
src/python/ki-shiny/services/: config_service.py  my_service.py
src/python/ki-weisswurstfruehstueck-kufstein/: .env.sample  blog.md  chat.py  main.py  main2.py  semantic_kernel_basics.ipynb  seo_boost_agent.py  social_craft_agent.py
src/rag-ai-search/: README.md  rag-ai-search.csproj
src/wd-mainboardgpt/: .gitignore  KernelSettings.cs  Program.cs  README.md
(+41 files in other folders)
